ghc-4335c07/testsuite/tests/typecheck/should_compile/T11480.hs
{-# LANGUAGE FlexibleContexts, UndecidableSuperClasses #-}

module T11480 where

class C [a] => D a
class D a => C a

foo :: C a => a -> a
foo = undefined
